# SymbDiffProject

./: CMakeLists.txt  Makefile  README.md  differentiator  expression.cpp  expression.hpp  expression.сpp  expression_test.cpp  main.cpp  parser.cpp  parser.hpp  test.cpp  tests
SymDiffFiles/: CMakeLists.txt  SymDiff.cpp  SymDiff.hpp
test/: test.cpp
